# ChaosApp

./: README.md  build.gradle  config.gradle  gradle.properties  settings.gradle
access/src/main/: AndroidManifest.xml
access/src/main/assets/: rom_match_config.json
adb/: build.gradle
adb/src/main/: AndroidManifest.xml
analysis_plugin/: build.gradle
app/: analysis.gradle  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/values/: colors.xml  (+2 more)
centre/: build.gradle
centre/src/main/: AndroidManifest.xml
game/: build.gradle
game/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
layer_base/anim/: build.gradle
layer_base/anim/src/main/: AndroidManifest.xml
layer_base/common/: build.gradle
layer_base/common/src/main/: AndroidManifest.xml
layer_base/crash/: build.gradle
layer_base/crash/src/main/: AndroidManifest.xml
layer_base/sys/: CMakeLists.txt  build.gradle
layer_base/sys/src/main/: AndroidManifest.xml
layer_base/utils/: build.gradle
layer_base/utils/src/main/: AndroidManifest.xml
layer_base/view/: build.gradle
layer_element/access/: build.gradle
layer_element/access/src/main/: AndroidManifest.xml
layer_element/adb/: app_grant.sh  build.gradle
layer_element/adb/src/main/: AndroidManifest.xml
layer_element/anim/: build.gradle
layer_element/game/: build.gradle
layer_element/image/: CMakeLists.txt  build.gradle
layer_element/learn/: build.gradle
layer_element/opengl/: build.gradle
layer_element/sound/: CMakeLists.txt  build.gradle
layer_element/sound/src/androidTest/java/com/lhr/sound/: ExampleInstrumentedTest.kt
layer_element/sound/src/main/: AndroidManifest.xml
layer_element/sound/src/main/cpp/: common_platform.cpp  common_platform.h
layer_element/sound/src/main/java/org/fmod/example/: MainActivity.java
layer_element/sound/src/test/java/com/lhr/sound/: ExampleUnitTest.kt
layer_element/sys/: build.gradle
layer_element/vpn/: build.gradle
layer_element/vpn/src/main/cpp/: CMakeLists.txt  byte-log-utils.c  vpn_data.c  vpn_data.h  vpn_data_ip_utils.c  vpn_data_tcp_utils.c  vpn_data_udp_utils.c  vpn_data_utils.c  vpn_ip_data_utils.c  vpn_ip_object.c  vpn_java_utils.c  vpn_jni_interface.c  vpn_log.c  vpn_object_ip.c  vpn_object_tcp.c  vpn_object_udp.c  vpn_socket.c  vpn_udp_data_utils.c  vpn_udp_object.c
layer_element/wallpaper/: CMakeLists.txt  build.gradle
layer_inter/centre/: build.gradle
layer_inter/centre_annotation/: build.gradle
layer_inter/centre_processor/: build.gradle
sys/src/main/: AndroidManifest.xml
utils/: build.gradle
view/src/main/: AndroidManifest.xml
wallpaper/: build.gradle
(+670 files in other folders)
